--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sql-employee-tracker",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/JessicaLDaley/SQL-Employee-Tracker/issues"
   },
-  "homepage": "https://github.com/JessicaLDaley/SQL-Employee-Tracker#readme"
+  "homepage": "https://github.com/JessicaLDaley/SQL-Employee-Tracker#readme",
+  "keywords": [],
+  "description": "",
+  "dependencies": {
+    "console-table-printer": "^2.10.0"
+  }
 }
