--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sql-employee-tracker",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -10,15 +11,17 @@
     "type": "git",
     "url": "git+https://github.com/JessicaLDaley/SQL-Employee-Tracker.git"
   },
-  "author": "Jessica Daley",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JessicaLDaley/SQL-Employee-Tracker/issues"
   },
   "homepage": "https://github.com/JessicaLDaley/SQL-Employee-Tracker#readme",
-  "keywords": [],
-  "description": "",
   "dependencies": {
-    "console-table-printer": "^2.10.0"
+    "chalk": "^4.1.2",
+    "console.table": "^0.10.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.2"
   }
 }
